--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,9 +16,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16'
+          cache: 'npm'
 
-      - name: Install clasp
-        run: npm install -g @google/clasp
+      - name: Install dependencies
+        run: npm ci
 
       - name: Authenticate clasp
         env:
@@ -27,4 +28,4 @@ jobs:
           echo "$CLASP_CREDENTIALS" > ~/.clasprc.json
 
       - name: Deploy to Google Apps Script
-        run: clasp push
+        run: npx clasp push -f
