--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Setup clasp config
+        run: |
+          echo '{"scriptId":"${{ secrets.SCRIPT_ID }}","rootDir":"src"}' > .clasp.json
+
       - name: Authenticate clasp
         env:
           CLASP_CREDENTIALS: ${{ secrets.CLASP_CREDENTIALS }}
