--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint:fix": "eslint src/ --fix",
     "login": "clasp login",
     "clone": "clasp clone",
-    "pull": "clasp pull"
+    "pull": "clasp pull",
+    "docs": "jsdoc2md src/Code.js | node scripts/update-readme.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +28,8 @@
     "eslint": "^9.18.0",
     "eslint-plugin-googleappsscript": "^1.0.5",
     "globals": "^15.14.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jsdoc-to-markdown": "^8.0.0"
   },
   "jest": {
     "setupFiles": ["<rootDir>/tests/setup.js"]
